tests/fixtures/pass/try_result_err_propagate.sc
let stop(move value: Result(i32, bool)): Result(i32, bool) = {
  let item = value.try
  0
}

let main(): i32 = stop(Result(i32, bool).Err(true)) ?? 42
